--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Son of Anton — Code Annihilator</title>
+    <title>Son of Anton</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <meta name="description"
         content="AI code simplifier that solves problems through elimination, not addition. Inspired by Silicon Valley.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
